Config modify to change lastmod priority

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -29,7 +29,7 @@ module:
 ## ADVANCED
 ############################
 
-enableGitInfo: false
+enableGitInfo: true
 summaryLength: 30
 paginate: 10
 enableEmoji: true
@@ -68,3 +68,22 @@ related:
       weight: 70
 security:
   _merge: deep
+
+  #######
+  ## KAG Modified 
+  #######
+  frontmatter:
+  date:
+  - date
+  - publishDate
+  - lastmod
+  expiryDate:
+  - expiryDate
+  lastmod:
+  - lastmod
+  - :git
+  - date
+  - publishDate
+  publishDate:
+  - publishDate
+  - date
