--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,9 +3,9 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
+title: Katelyn Greene # Website name
 baseurl: 'https://example.com/' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+copyright: '© 2022 Katelyn Greene' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
@@ -29,7 +29,7 @@ module:
 ## ADVANCED
 ############################
 
-enableGitInfo: true
+enableGitInfo: true # I changed this from false to true
 summaryLength: 30
 paginate: 10
 enableEmoji: true
