--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -131,7 +131,7 @@ map:
   api_key: ''
   zoom: 15
 marketing:
-  google_analytics: ''
+  google_analytics: UA-143047010-1
   google_tag_manager: ''
   google_site_verification: ''
   baidu_site_verification: ''
