--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,15 +7,15 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Research
-    url: 'research/'
-    weight: 20
-  - name: Outreach
-    url: 'outreach/'
-    weight: 30
+  # - name: Research
+  #   url: 'research/'
+  #   weight: 20
+  # - name: Outreach
+  #   url: 'outreach/'
+  #   weight: 30
   - name: Posts
     url: 'posts/'
-    weight: 40
+    weight: 20
 
 
 # Link to a PDF of your resume/CV from the menu.
