--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   # - name: Research
   #   url: 'research/'
   #   weight: 20
-  # - name: Outreach
-  #   url: 'outreach/'
-  #   weight: 30
+  - name: Outreach
+    url: 'outreach/'
+    weight: 30
   - name: Posts
     url: 'posts/'
     weight: 20
