--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -16,7 +16,7 @@ site_type: Person
 local_business_type: ''
 org_name: ''
 description: ''
-twitter: 'KatelynAGreene'
+twitter: ''
 
 # Contact (edit or remove options as required)
 
@@ -38,7 +38,7 @@ contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
-    link: 'https://twitter.com/KatelynAGreene'
+    link: ''
 
 
 # Site header
