--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@
 
 title: Katelyn Greene # Website name
 baseurl: 'https://katelyngreene.com/' # Website URL
-copyright: '© 2022 Katelyn Greene' # Footer text, e.g. '© {year} Me'
+copyright: '© {year} Katelyn Greene' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
